fix: use java HttpClient for Notion SDK